# Hi3531DV100_SDK_V1.0.5.0_HiFB_LVGL_Sample

./: .gitignore  CMakeLists.txt  README
include/: hi_comm_aio.h  hi_comm_hdmi.h  hi_comm_vdec.h  hi_comm_venc.h  hi_comm_vi.h  hi_comm_vpss.h  hi_defines.h  mpi_hdmi.h  mpi_pciv.h  mpi_venc.h  mpi_vi.h  mpi_vo.h  mpi_vpss.h  nvp6134.h  tp2802.h
src/: CMakeLists.txt  sample_comm.h  sample_comm_audio.c  sample_comm_ivs.c  sample_comm_ivs.h  sample_comm_sys.c  sample_comm_vda.c  sample_comm_vdec.c  sample_comm_venc.c  sample_comm_vi.c  sample_comm_vo.c  sample_comm_vpss.c  sample_hifb.c  sample_hifb_lvgl.c  sample_lvgl.c
src/lvgl/: CMakeLists.txt  lv_drv_conf.h
src/lvgl/lv_drivers/display/: fbdev.c
